Refactored Clock code

--- a/Clock.ini
+++ b/Clock.ini
@@ -1,5 +1,5 @@
 [Metadata]
-    Name=Nothing Phone - Clock
+    Name=Nothing Widgets - Square Clock
     Author=KrazyManJ
     Version=1.0.0
     License=MIT License
@@ -20,16 +20,16 @@
     Meter=String
     FontFace=NDOT 47 (inspired by NOTHING)
     FontColor=F2F0F4
-    X=([WidgetContainer:W]/2)
-    Y=([WidgetContainer:H]/2+20)
-    stringAlign = CenterBottom
+    X=([WidgetContainer:XW]/2)
+    Y=([WidgetContainer:YH]/2+20)
+    StringAlign = CenterBottom
     FontSize=72
     AntiAlias=1
     MeasureName=M_Hours
 [Minutes]
     Meter=String
     MeterStyle=Hours
-    stringAlign = CenterTop
-    Y=([WidgetContainer:H]/2-20)
+    StringAlign = CenterTop
+    Y=([WidgetContainer:YH]/2-20)
     MeasureName=M_Minutes
     
