Updated widget names, added analog clock widget

--- a/Clock/Clock_Digital.ini
+++ b/Clock/Clock_Digital.ini
@@ -1,5 +1,5 @@
 [Metadata]
-    Name=Nothing Widgets - Square Clock
+    Name=Nothing Widgets - Digital Clock
     Author=KrazyManJ
     Version=1.0.0
     License=MIT License
